--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -102,6 +102,8 @@
       flex-direction: row;
     }
 
+    margin-bottom: $font-size-base;
+
     align-items: flex-start;
     display: flex;
     flex-direction: column;
