--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -122,9 +122,8 @@
 
   ul,
   ol {
-    padding-left: 20px;
+    padding-left: $font-size-base;
     list-style-position: outside;
-    margin: 20px 0 20px 20px;
 
     [dir="rtl"] & {
       padding-right: 20px;
